<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_display_settings_24"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_controls"
            android:icon="@drawable/baseline_display_settings_24"
            android:title="@string/menu_controls" />
        <item
            android:id="@+id/nav_importexport"
            android:icon="@drawable/baseline_import_export_24"
            android:title="@string/menu_import_export" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/baseline_info_24"
            android:title="@string/menu_about" />
    </group>
</menu>