<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.libopenmw.android.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.libopenmw.android.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_controls"
        android:name="com.libopenmw.android.ui.controls.ControlsFragment"
        android:label="@string/menu_controls"
        tools:layout="@layout/fragment_controls" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.libopenmw.android.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_importexport"
        android:name="com.libopenmw.android.ui.importexport.ImportExportFragment"
        android:label="@string/menu_import_export"
        tools:layout="@layout/fragment_import_export" />


</navigation>